# haskell-starter

./: .ghcid  .gitignore  LICENSE  fourmolu.yaml  haskell-starter.cabal  hlint.yaml
